# spellscript-refactor-tool

./: .gitignore  README.md  pyproject.toml  refactor.ipynb
.github/workflows/: main.yml  python-publish.yml
acore_spellscript_refactor/: discover.py  main.py  refactor.py
acore_spellscript_refactor/util/: db.py  logger.py
data/: aura_plus_spell_script.cpp  aura_script.cpp  spell_script.cpp
spellscript_refactor/: main.py  refactor.py
spellscript_refactor/util/: colors.py  logger.py
src/spellscript_refactor/: main.py
tests/: test_aura_script.py  test_db.py  test_find_name_of_script.py  test_find_spell_to_validate.py  test_name_withScript.py  test_pair_script.py  test_pair_with_validate.py  test_replace_new.py  test_spell_script.py  test_with_input_file.py  test_with_input_file_with_args.py  test_with_input_string.py  test_with_input_string_combined.py  test_with_input_string_pair.py  test_with_input_string_with_privates.py  test_write_replace_file.py  test_write_replace_file_pair_skip.py
tests/test_aura_script/: aura_script_expected.cpp  aura_script_read.cpp
tests/test_pair_script/: aura_pair_script_expected.cpp
tests/test_pair_with_validate/: boss_ignis_expected.cpp
tests/test_spell_script/: spell_script_expected.cpp  spell_script_read.cpp
tests/test_with_input_file/: boss_yoggsaron.cpp
tests/test_with_input_file_with_args/: boss_hadronox_expected.cpp
tests/test_with_input_pair_file_skip/: boss_yoggsaron_expected.cpp
tests/test_write_replace_file/: boss_yoggsaron_expected.cpp  boss_yoggsaron_write.cpp
(+4 files in other folders)
